Exportdata/main/default/objects/Property_Maintenance__c/Property_Maintenance__c.object-meta.xml
<CustomObject>
    <label>Property Maintenance</label>
    <nameField>
        <label>Property Maintenance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Maintenances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>