Exportdata/main/default/objects/Property_Maintenance__c/fields/No_of_Maintainance_staff__c.field-meta.xml
<CustomField>
    <fullName>No_of_Maintainance_staff__c</fullName>
    <label>No of Maintainance staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>