Exportdata/main/default/objects/Property_Maintenance__c/fields/Property_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Property_Maintenance__c</fullName>
    <label>Property Maintenance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heating and Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Lawn and yard maintenance</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>