Exportdata/main/default/objects/Property_Maintenance__c/fields/Property_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Unit_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Unit Name</label>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipLabel>Property Maintenances</relationshipLabel>
    <relationshipName>Property_Maintenances</relationshipName>
    <type>Lookup</type>
</CustomField>