Exportdata/main/default/objects/Property_Maintenance__c/fields/Renter_Name__c.field-meta.xml
<CustomField>
    <fullName>Renter_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renter Name</label>
    <referenceTo>Renter_Information__c</referenceTo>
    <relationshipLabel>Property Maintenances</relationshipLabel>
    <relationshipName>Property_Maintenances</relationshipName>
    <type>Lookup</type>
</CustomField>